// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Overlay Dark 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <styled.p
            color="currentColor"
            disabled={false}
            fontSize="16px"
            inline={false}
            lineHeight="1.5"
            mb={0}
            mt={0}
          >
            <p
              className="sc-AykKF jKbmDj"
              color="currentColor"
              disabled={false}
              fontSize="16px"
            >
              Background content
            </p>
          </styled.p>
          <Styled(Styled(Box))
            alignItems="center"
            dark={true}
            justifyContent="center"
            position="fixed"
            theme={
              Object {
                "borders": Array [],
                "breakpoints": Object {
                  "extraLarge": "1920px",
                  "extraSmall": "0px",
                  "large": "1360px",
                  "medium": "1024px",
                  "small": "768px",
                },
                "colors": Object {
                  "black": "#011e38",
                  "blackBlue": "#122b47",
                  "blue": "#216beb",
                  "darkBlue": "#00438f",
                  "darkGrey": "#434d59",
                  "green": "#008059",
                  "grey": "#c0c8d1",
                  "lightBlue": "#e1ebfa",
                  "lightGreen": "#e9f7f2",
                  "lightGrey": "#e4e7eb",
                  "lightRed": "#fae6ea",
                  "lightYellow": "#fcf5e3",
                  "red": "#cc1439",
                  "white": "#ffffff",
                  "whiteGrey": "#f0f2f5",
                  "yellow": "#ffbb00",
                },
                "fontSizes": Object {
                  "large": "20px",
                  "larger": "26px",
                  "largest": "46px",
                  "medium": "16px",
                  "small": "14px",
                  "smaller": "12px",
                },
                "fontWeights": Object {
                  "bold": "600",
                  "light": "300",
                  "medium": "500",
                  "normal": "400",
                },
                "fonts": Object {
                  "base": "'IBM Plex Sans', sans-serif",
                  "mono": "'IBM Plex Mono', monospace",
                },
                "lineHeights": Object {
                  "base": "1.5",
                  "sectionTitle": "1.23076923",
                  "smallTextBase": "1.71428571",
                  "smallTextCompressed": "1.14285714",
                  "smallerText": "1.33333333",
                  "subsectionTitle": "1.2",
                  "title": "1.04347826",
                },
                "radii": Object {
                  "circle": "50%",
                  "medium": "4px",
                  "small": "2px",
                },
                "shadows": Object {
                  "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                  "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                  "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                  "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                  "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                },
                "space": Object {
                  "half": "4px",
                  "none": "0px",
                  "x1": "8px",
                  "x2": "16px",
                  "x3": "24px",
                  "x4": "32px",
                  "x5": "40px",
                  "x6": "48px",
                  "x8": "64px",
                },
                "zIndex": Object {
                  "content": 100,
                  "overlay": 1000,
                  "tabsBar": 210,
                  "tabsScollIndicator": 200,
                },
              }
            }
          >
            <div
              className="Box-sc-1qu1edy-0 sc-AykKC sc-fzXfNQ hrKngL"
            >
              <Styled(Box)
                bg="whiteGrey"
                borderRadius="medium"
                boxShadow="small"
                p="x2"
                position="relative"
                theme={
                  Object {
                    "borders": Array [],
                    "breakpoints": Object {
                      "extraLarge": "1920px",
                      "extraSmall": "0px",
                      "large": "1360px",
                      "medium": "1024px",
                      "small": "768px",
                    },
                    "colors": Object {
                      "black": "#011e38",
                      "blackBlue": "#122b47",
                      "blue": "#216beb",
                      "darkBlue": "#00438f",
                      "darkGrey": "#434d59",
                      "green": "#008059",
                      "grey": "#c0c8d1",
                      "lightBlue": "#e1ebfa",
                      "lightGreen": "#e9f7f2",
                      "lightGrey": "#e4e7eb",
                      "lightRed": "#fae6ea",
                      "lightYellow": "#fcf5e3",
                      "red": "#cc1439",
                      "white": "#ffffff",
                      "whiteGrey": "#f0f2f5",
                      "yellow": "#ffbb00",
                    },
                    "fontSizes": Object {
                      "large": "20px",
                      "larger": "26px",
                      "largest": "46px",
                      "medium": "16px",
                      "small": "14px",
                      "smaller": "12px",
                    },
                    "fontWeights": Object {
                      "bold": "600",
                      "light": "300",
                      "medium": "500",
                      "normal": "400",
                    },
                    "fonts": Object {
                      "base": "'IBM Plex Sans', sans-serif",
                      "mono": "'IBM Plex Mono', monospace",
                    },
                    "lineHeights": Object {
                      "base": "1.5",
                      "sectionTitle": "1.23076923",
                      "smallTextBase": "1.71428571",
                      "smallTextCompressed": "1.14285714",
                      "smallerText": "1.33333333",
                      "subsectionTitle": "1.2",
                      "title": "1.04347826",
                    },
                    "radii": Object {
                      "circle": "50%",
                      "medium": "4px",
                      "small": "2px",
                    },
                    "shadows": Object {
                      "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                      "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                      "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                      "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                      "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                    },
                    "space": Object {
                      "half": "4px",
                      "none": "0px",
                      "x1": "8px",
                      "x2": "16px",
                      "x3": "24px",
                      "x4": "32px",
                      "x5": "40px",
                      "x6": "48px",
                      "x8": "64px",
                    },
                    "zIndex": Object {
                      "content": 100,
                      "overlay": 1000,
                      "tabsBar": 210,
                      "tabsScollIndicator": 200,
                    },
                  }
                }
              >
                <div
                  className="Box-sc-1qu1edy-0 sc-fzXfNi dLcGpC"
                >
                  <styled.p
                    color="currentColor"
                    disabled={false}
                    fontSize="16px"
                    inline={false}
                    lineHeight="1.5"
                    mb={0}
                    mt={0}
                  >
                    <p
                      className="sc-AykKF jKbmDj"
                      color="currentColor"
                      disabled={false}
                      fontSize="16px"
                    >
                      Overlay content
                    </p>
                  </styled.p>
                </div>
              </Styled(Box)>
            </div>
          </Styled(Styled(Box))>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;

exports[`Storyshots Overlay Light (default) 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <NDSProvider
    theme={
      Object {
        "borders": Array [],
        "breakpoints": Object {
          "extraLarge": "1920px",
          "extraSmall": "0px",
          "large": "1360px",
          "medium": "1024px",
          "small": "768px",
        },
        "colors": Object {
          "black": "#011e38",
          "blackBlue": "#122b47",
          "blue": "#216beb",
          "darkBlue": "#00438f",
          "darkGrey": "#434d59",
          "green": "#008059",
          "grey": "#c0c8d1",
          "lightBlue": "#e1ebfa",
          "lightGreen": "#e9f7f2",
          "lightGrey": "#e4e7eb",
          "lightRed": "#fae6ea",
          "lightYellow": "#fcf5e3",
          "red": "#cc1439",
          "white": "#ffffff",
          "whiteGrey": "#f0f2f5",
          "yellow": "#ffbb00",
        },
        "fontSizes": Object {
          "large": "20px",
          "larger": "26px",
          "largest": "46px",
          "medium": "16px",
          "small": "14px",
          "smaller": "12px",
        },
        "fontWeights": Object {
          "bold": "600",
          "light": "300",
          "medium": "500",
          "normal": "400",
        },
        "fonts": Object {
          "base": "'IBM Plex Sans', sans-serif",
          "mono": "'IBM Plex Mono', monospace",
        },
        "lineHeights": Object {
          "base": "1.5",
          "sectionTitle": "1.23076923",
          "smallTextBase": "1.71428571",
          "smallTextCompressed": "1.14285714",
          "smallerText": "1.33333333",
          "subsectionTitle": "1.2",
          "title": "1.04347826",
        },
        "radii": Object {
          "circle": "50%",
          "medium": "4px",
          "small": "2px",
        },
        "shadows": Object {
          "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
          "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
          "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
          "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
          "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
        },
        "space": Object {
          "half": "4px",
          "none": "0px",
          "x1": "8px",
          "x2": "16px",
          "x3": "24px",
          "x4": "32px",
          "x5": "40px",
          "x6": "48px",
          "x8": "64px",
        },
        "zIndex": Object {
          "content": 100,
          "overlay": 1000,
          "tabsBar": 210,
          "tabsScollIndicator": 200,
        },
      }
    }
  >
    <Memo(GlobalStyleComponent) />
    <NDSProvider__GlobalStyles
      theme={
        Object {
          "borders": Array [],
          "breakpoints": Object {
            "extraLarge": "1920px",
            "extraSmall": "0px",
            "large": "1360px",
            "medium": "1024px",
            "small": "768px",
          },
          "colors": Object {
            "black": "#011e38",
            "blackBlue": "#122b47",
            "blue": "#216beb",
            "darkBlue": "#00438f",
            "darkGrey": "#434d59",
            "green": "#008059",
            "grey": "#c0c8d1",
            "lightBlue": "#e1ebfa",
            "lightGreen": "#e9f7f2",
            "lightGrey": "#e4e7eb",
            "lightRed": "#fae6ea",
            "lightYellow": "#fcf5e3",
            "red": "#cc1439",
            "white": "#ffffff",
            "whiteGrey": "#f0f2f5",
            "yellow": "#ffbb00",
          },
          "fontSizes": Object {
            "large": "20px",
            "larger": "26px",
            "largest": "46px",
            "medium": "16px",
            "small": "14px",
            "smaller": "12px",
          },
          "fontWeights": Object {
            "bold": "600",
            "light": "300",
            "medium": "500",
            "normal": "400",
          },
          "fonts": Object {
            "base": "'IBM Plex Sans', sans-serif",
            "mono": "'IBM Plex Mono', monospace",
          },
          "lineHeights": Object {
            "base": "1.5",
            "sectionTitle": "1.23076923",
            "smallTextBase": "1.71428571",
            "smallTextCompressed": "1.14285714",
            "smallerText": "1.33333333",
            "subsectionTitle": "1.2",
            "title": "1.04347826",
          },
          "radii": Object {
            "circle": "50%",
            "medium": "4px",
            "small": "2px",
          },
          "shadows": Object {
            "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
            "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
            "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
            "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
            "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
          },
          "space": Object {
            "half": "4px",
            "none": "0px",
            "x1": "8px",
            "x2": "16px",
            "x3": "24px",
            "x4": "32px",
            "x5": "40px",
            "x6": "48px",
            "x8": "64px",
          },
          "zIndex": Object {
            "content": 100,
            "overlay": 1000,
            "tabsBar": 210,
            "tabsScollIndicator": 200,
          },
        }
      }
    >
      <div
        className="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
      >
        <ThemeProvider
          theme={
            Object {
              "borders": Array [],
              "breakpoints": Object {
                "extraLarge": "1920px",
                "extraSmall": "0px",
                "large": "1360px",
                "medium": "1024px",
                "small": "768px",
              },
              "colors": Object {
                "black": "#011e38",
                "blackBlue": "#122b47",
                "blue": "#216beb",
                "darkBlue": "#00438f",
                "darkGrey": "#434d59",
                "green": "#008059",
                "grey": "#c0c8d1",
                "lightBlue": "#e1ebfa",
                "lightGreen": "#e9f7f2",
                "lightGrey": "#e4e7eb",
                "lightRed": "#fae6ea",
                "lightYellow": "#fcf5e3",
                "red": "#cc1439",
                "white": "#ffffff",
                "whiteGrey": "#f0f2f5",
                "yellow": "#ffbb00",
              },
              "fontSizes": Object {
                "large": "20px",
                "larger": "26px",
                "largest": "46px",
                "medium": "16px",
                "small": "14px",
                "smaller": "12px",
              },
              "fontWeights": Object {
                "bold": "600",
                "light": "300",
                "medium": "500",
                "normal": "400",
              },
              "fonts": Object {
                "base": "'IBM Plex Sans', sans-serif",
                "mono": "'IBM Plex Mono', monospace",
              },
              "lineHeights": Object {
                "base": "1.5",
                "sectionTitle": "1.23076923",
                "smallTextBase": "1.71428571",
                "smallTextCompressed": "1.14285714",
                "smallerText": "1.33333333",
                "subsectionTitle": "1.2",
                "title": "1.04347826",
              },
              "radii": Object {
                "circle": "50%",
                "medium": "4px",
                "small": "2px",
              },
              "shadows": Object {
                "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
              },
              "space": Object {
                "half": "4px",
                "none": "0px",
                "x1": "8px",
                "x2": "16px",
                "x3": "24px",
                "x4": "32px",
                "x5": "40px",
                "x6": "48px",
                "x8": "64px",
              },
              "zIndex": Object {
                "content": 100,
                "overlay": 1000,
                "tabsBar": 210,
                "tabsScollIndicator": 200,
              },
            }
          }
        >
          <styled.p
            color="currentColor"
            disabled={false}
            fontSize="16px"
            inline={false}
            lineHeight="1.5"
            mb={0}
            mt={0}
          >
            <p
              className="sc-AykKF jKbmDj"
              color="currentColor"
              disabled={false}
              fontSize="16px"
            >
              Background content
            </p>
          </styled.p>
          <Styled(Styled(Box))
            alignItems="center"
            dark={false}
            justifyContent="center"
            position="fixed"
            theme={
              Object {
                "borders": Array [],
                "breakpoints": Object {
                  "extraLarge": "1920px",
                  "extraSmall": "0px",
                  "large": "1360px",
                  "medium": "1024px",
                  "small": "768px",
                },
                "colors": Object {
                  "black": "#011e38",
                  "blackBlue": "#122b47",
                  "blue": "#216beb",
                  "darkBlue": "#00438f",
                  "darkGrey": "#434d59",
                  "green": "#008059",
                  "grey": "#c0c8d1",
                  "lightBlue": "#e1ebfa",
                  "lightGreen": "#e9f7f2",
                  "lightGrey": "#e4e7eb",
                  "lightRed": "#fae6ea",
                  "lightYellow": "#fcf5e3",
                  "red": "#cc1439",
                  "white": "#ffffff",
                  "whiteGrey": "#f0f2f5",
                  "yellow": "#ffbb00",
                },
                "fontSizes": Object {
                  "large": "20px",
                  "larger": "26px",
                  "largest": "46px",
                  "medium": "16px",
                  "small": "14px",
                  "smaller": "12px",
                },
                "fontWeights": Object {
                  "bold": "600",
                  "light": "300",
                  "medium": "500",
                  "normal": "400",
                },
                "fonts": Object {
                  "base": "'IBM Plex Sans', sans-serif",
                  "mono": "'IBM Plex Mono', monospace",
                },
                "lineHeights": Object {
                  "base": "1.5",
                  "sectionTitle": "1.23076923",
                  "smallTextBase": "1.71428571",
                  "smallTextCompressed": "1.14285714",
                  "smallerText": "1.33333333",
                  "subsectionTitle": "1.2",
                  "title": "1.04347826",
                },
                "radii": Object {
                  "circle": "50%",
                  "medium": "4px",
                  "small": "2px",
                },
                "shadows": Object {
                  "error": "0px 0px 5px 0px rgba(204, 20, 57, .9)",
                  "focus": "0px 0px 5px 0px rgba(33, 107, 235, .9)",
                  "large": "0px 3px 5px 0px rgba(1, 30, 56, 0.1)",
                  "medium": "0px 1px 4px 0px rgba(1, 30, 56, 0.15)",
                  "small": "0px 0px 3px 0px rgba(1, 30, 56, 0.2)",
                },
                "space": Object {
                  "half": "4px",
                  "none": "0px",
                  "x1": "8px",
                  "x2": "16px",
                  "x3": "24px",
                  "x4": "32px",
                  "x5": "40px",
                  "x6": "48px",
                  "x8": "64px",
                },
                "zIndex": Object {
                  "content": 100,
                  "overlay": 1000,
                  "tabsBar": 210,
                  "tabsScollIndicator": 200,
                },
              }
            }
          >
            <div
              className="Box-sc-1qu1edy-0 sc-AykKC sc-fzXfNQ bPGMPU"
            >
              Overlay content
            </div>
          </Styled(Styled(Box))>
        </ThemeProvider>
      </div>
    </NDSProvider__GlobalStyles>
  </NDSProvider>
</div>
`;
